--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyberbullying</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
    </head>
 <body>
@@ -15,10 +15,10 @@
       </div>
       <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="./about.html">About</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="/contact section/index.html">Contact</a></li>
-        <li><a href="/feedback.html">Feedback</a></li>
+        <li><a href="./contact section/index.html">Contact</a></li>
+        <li><a href="./feedback.html">Feedback</a></li>
       </ul>
     </div>
   </nav>
@@ -30,7 +30,7 @@
     or harassment using electronic means. We are here to listen from you<br>
     and help you with all the possible resources</p>
     <div class="btns">
-      <button><a href="/report.html"> Report</a></button>
+      <button><a href="./report.html"> Report</a></button>
       <button>Learn More</button>
     </div>
   </div>
