--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/contact section/style.css">
+    <link rel="stylesheet" href="./contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
