--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="./contact section/index.html">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
         <li><a href="./feedback.html">Feedback</a></li>
       </ul>
     </div>
